Bug fix for forgotten literal case